# globe-cloud-insights

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: streamlit_app.py
binder/: environment.yml
data/: README.md
data/processed/: globe_clouds_2022_clean.parquet
data/raw/: globe_clouds_2022.csv
docs/: glossary.md  index.html  tutorial.md
docs/assets/: observatory.js  style.css
notebooks/: 01_fetch_and_clean.ipynb  02_exploratory_analysis.ipynb
src/globe_cloud_insights/: __init__.py  analysis.py  clean.py  config.py  fetch.py
tests/: conftest.py  test_analysis.py  test_app.py  test_clean.py  test_config.py  test_fetch.py
