[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "globe-cloud-insights"
version = "0.1.0"
description = "Research-quality data visualization of NASA GLOBE Observer Clouds 2022 campaign data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ruddro Roy"},
]
keywords = ["NASA", "GLOBE", "clouds", "citizen-science", "data-visualization", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=12.0",
    "requests>=2.28",
    "plotly>=5.15",
    "folium>=0.14",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "streamlit>=1.28",
    "streamlit-folium>=0.15",
    "pydeck>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "responses>=0.23",
]
notebooks = [
    "jupyter>=1.0",
    "nbformat>=5.0",
    "ipykernel>=6.0",
]

[project.urls]
Homepage = "https://github.com/ruddro-roy/globe-cloud-insights"
Repository = "https://github.com/ruddro-roy/globe-cloud-insights"
Documentation = "https://github.com/ruddro-roy/globe-cloud-insights/tree/main/docs"
Issues = "https://github.com/ruddro-roy/globe-cloud-insights/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["globe_cloud_insights"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/globe_cloud_insights --cov-report=term-missing --cov-report=html"
